--- a/css/main.css
+++ b/css/main.css
@@ -1220,7 +1220,8 @@ header {
     bottom: 66px; }
 
 .swiper-slide {
-  width: 340px; }
+  width: auto;
+  min-width: 200px; }
 
 .cards__slider {
   width: 100%; }
