--- a/css/main.css
+++ b/css/main.css
@@ -529,14 +529,17 @@ header {
       font-family: Gilroy_medium; }
     @media (max-width: 1330px) {
       .headerCard .content h1 {
-        font-size: 24px; } }
+        font-size: 24px;
+        font-weight: 800; } }
     @media (max-width: 992px) {
       .headerCard .content h1 {
-        font-size: 18px; } }
+        font-size: 18px;
+        font-weight: 800; } }
     @media (max-width: 576px) {
       .headerCard .content h1 {
         font-size: 17px;
-        line-height: 20px !important; } }
+        line-height: 20px !important;
+        font-weight: 800; } }
     @media (max-width: 400px) {
       .headerCard .content h1 {
         font-size: 15px;
@@ -556,13 +559,14 @@ header {
       margin-top: 30px; }
     .headerCard .content .dates {
       font-size: calc((100vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
-      font-family: Gilroy_Semiold; }
+      font-family: Gilroy_Semiold;
+      font-weight: 800; }
     .headerCard .content button {
       padding: 8px 30px;
       border-radius: 6.4px;
       border: 1px solid #333333c0;
       background-color: #fff;
-      margin-top: 10px;
+      margin-top: 8px;
       font-family: Gilroy_Semiold;
       font-weight: 600;
       color: #333333c0;
@@ -670,7 +674,8 @@ header {
     width: 100%;
     height: 60px;
     display: flex;
-    overflow-x: scroll; }
+    overflow-x: scroll;
+    padding-left: 5px; }
     .nearestEvents .scrollWrap .arrowBlock {
       position: absolute;
       height: 70px;
@@ -792,7 +797,6 @@ header {
       padding: 3px;
       border-radius: 10.4px;
       z-index: -1;
-      background: linear-gradient(255deg, #feda7a, #f72f2f, #7166cf);
       background-size: 130% 110%;
       transition: all 0.5s ease !important; }
       .container .infom__block .inform__block-right .butto__wrap button {
@@ -945,8 +949,18 @@ header {
   background-color: #fff;
   border: 1px solid #333333; }
 
+.specialtySwiper {
+  width: 100%; }
+
+.swiper-wrapper {
+  width: 100% !important;
+  position: relative !important; }
+
 .swiper-pagination-bullet-active {
   background-color: #333333; }
+
+.swiper-button-disabled {
+  opacity: 0 !important; }
 
 .h2 {
   margin-bottom: 25px !important; }
@@ -1078,7 +1092,7 @@ header {
     min-height: 71px; }
     .event-card .card-header .dates div {
       font-size: 24px;
-      font-weight: 100 !important;
+      font-weight: 800;
       line-height: 28px;
       font-family: Gilroy_bold; }
     .event-card .card-header .count {
@@ -1462,7 +1476,8 @@ header {
           display: flex;
           justify-content: center;
           align-items: center; }
-          .modal_wrap .modal_window .modal_content .modal__scroll__content .modal__content-item img, .modal_wrap .modal_window .modal_content .modal__scroll__content .modal__content-item svg {
+          .modal_wrap .modal_window .modal_content .modal__scroll__content .modal__content-item img,
+          .modal_wrap .modal_window .modal_content .modal__scroll__content .modal__content-item svg {
             width: 100%; }
     .modal_wrap .modal_window .modal_content::-webkit-scrollbar {
       width: 3px; }
